# dex-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
dex-rs-core/: Cargo.toml
dex-rs-core/src/: error.rs  lib.rs  rt_tokio.rs  runtime.rs  traits.rs
dex-rs-core/src/http/: mod.rs
dex-rs-core/src/ws/: mod.rs  tokio_fastws.rs
dex-rs-examples/: Cargo.toml  README.md
dex-rs-examples/src/: cancel_order.rs  fills.rs  funding_history.rs  market_info.rs  orderbook.rs  place_order.rs  positions.rs  simple.rs  trades.rs  user_state.rs  ws_all_streams.rs  ws_bbo.rs  ws_orderbook.rs  ws_trades.rs  ws_user_events.rs
dex-rs-exchanges/hyperliquid/: Cargo.toml
dex-rs-exchanges/hyperliquid/src/: client.rs  http.rs  lib.rs  signer.rs  ws.rs
dex-rs-exchanges/hyperliquid/tests/: live.rs
dex-rs-types/: Cargo.toml
dex-rs-types/src/: lib.rs
src/: lib.rs
