[package]
name = "dex-rs"
version = "0.2.0"
edition = "2021"
description = "High-performance Rust library for cryptocurrency perpetual exchanges"
license = "MIT"
repository = "https://github.com/Nayshins/dex-rs"
documentation = "https://docs.rs/dex-rs"
readme = "README.md"
keywords = ["cryptocurrency", "trading", "perpetuals", "dex", "hyperliquid"]
categories = ["api-bindings", "asynchronous", "network-programming"]

[workspace]
resolver = "2"
members = [
    "dex-rs-types",
    "dex-rs-core",
    "dex-rs-exchanges/hyperliquid",
    "dex-rs-examples"
]

[workspace.dependencies]
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
simd-json        = { version = "0.14", features = ["serde_impl"] }
ordered-float    = "4.2"
tokio            = { version = "1", features = ["macros","rt-multi-thread"] }
async-trait      = "0.1"
thiserror        = "1.0"
reqwest          = { version = "0.12", features = ["json","rustls-tls"], default-features = false }
fastwebsockets   = { version = "0.7", default-features = false, features = ["upgrade","simd"] }
futures-util     = "0.3"
hex              = "0.4"
rmp-serde        = "1.1"
alloy            = { version = "0.8", features = ["signer-local","serde"] }
hyper            = "1.6"
hyper-util       = { version = "0.1", features = ["tokio"] }
http-body-util   = "0.1"
bytes            = "1.6"
http             = "1.1"
tracing          = "0.1"
rustls           = "0.23"
tokio-rustls     = "0.26"
webpki-roots     = "0.26"

[dependencies]
dex-rs-core        = { path = "./dex-rs-core", version = "0.2.0" }
dex-rs-types       = { path = "./dex-rs-types", version = "0.2.0" }
dex-rs-hyperliquid = { path = "./dex-rs-exchanges/hyperliquid", version = "0.2.0", optional = true }
ordered-float      = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }

[features]
default     = ["hyperliquid"]
hyperliquid = ["dex-rs-hyperliquid"]