[package]
name = "dex-rs-types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ordered-float = { workspace = true, features = ["serde"] }
rust_decimal = { version = "1.35", optional = true }
rust_decimal_macros = { version = "1.35", optional = true }

[features]
decimal = ["rust_decimal", "rust_decimal_macros"]
