[package]
name = "dex-rs-types"
version = "0.2.0"
edition = "2021"
description = "Common type definitions for dex-rs cryptocurrency trading library"
license = "MIT"
repository = "https://github.com/Nayshins/dex-rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ordered-float = { workspace = true, features = ["serde"] }
rust_decimal = { version = "1.35", optional = true }
rust_decimal_macros = { version = "1.35", optional = true }

[features]
decimal = ["rust_decimal", "rust_decimal_macros"]
