[package]
name    = "dex-rs-hyperliquid"
version = "0.2.0"
edition = "2021"
description = "Hyperliquid exchange implementation for dex-rs"
license = "MIT"
repository = "https://github.com/Nayshins/dex-rs"

[dependencies]
# internal
dex-rs-types = { path = "../../dex-rs-types", version = "0.2.0" }
dex-rs-core  = { path = "../../dex-rs-core", version = "0.2.0" }

# workspace re-uses
serde       = { workspace = true }
serde_json  = { workspace = true }
simd-json   = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
bytes       = { workspace = true }
futures-util = "0.3"

# cryptography
alloy = { version = "0.8", features = ["signer-local", "serde"] }

# messagepack for signing payloads
rmp-serde = "1.1"
hex = "0.4"

[features]
default = []
